--- a/index.html
+++ b/index.html
@@ -2,30 +2,44 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Fa – Hajnal</title>
+  <title>AR Fa – Hajnal</title>
+
+  <!-- A-Frame + AR.js -->
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
+
+  <style>
+    body { margin: 0; overflow: hidden; }
+  </style>
 </head>
 
-<body style="margin:0">
+<body>
 
-<a-scene>
+<a-scene
+  embedded
+  arjs="sourceType: webcam; debugUIEnabled: false;"
+  vr-mode-ui="enabled: false"
+>
+
+  <!-- modell -->
   <a-assets>
     <a-asset-item id="tree" src="stylized_tree.glb"></a-asset-item>
   </a-assets>
 
-  <a-entity
-  gltf-model="#tree"
-  position="0 -1 -6"
-  scale="0.15 0.15 0.15">
-</a-entity>
+  <!-- markerhez kötött fa -->
+  <a-marker preset="hiro">
+    <a-entity
+      gltf-model="#tree"
+      scale="0.15 0.15 0.15"
+      position="0 0 0">
+    </a-entity>
+  </a-marker>
 
-  <a-sky color="#E6EEF4"></a-sky>
-  <a-light type="ambient" intensity="1"></a-light>
-  <a-light type="directional" position="1 2 1" intensity="0.6"></a-light>
+  <a-entity camera></a-entity>
 
-  <a-camera></a-camera>
 </a-scene>
 
 </body>
 </html>
+
 
